<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
     android:weightSum="3"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/item_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/item_mehdi_icon"
        app:civ_border_color="#3f51b5"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        app:civ_shadow="true"

        app:civ_shadow_color="#09c6df"/>
    </LinearLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView

            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/item_default_name"

            android:textColor="#3f51b5"
            android:textSize="15dp"
            app:fontFamily="@font/aclonica" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:weightSum="4">

            <TextView
                android:id="@+id/t1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/val_t1"
                android:textColor="#F57F17"
                app:fontFamily="@font/aclonica" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/val_t2"
                android:textColor="#F57F17"


                app:fontFamily="@font/aclonica" />

            <TextView
                android:id="@+id/A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/val_A"
                android:textColor="#F57F17"

                app:fontFamily="@font/aclonica" />

            <TextView

                android:id="@+id/As"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/val_As"
                android:textColor="#F57F17"
                app:fontFamily="@font/aclonica"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/test1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingRight="10dp"
                android:text="@string/val_test1"
                android:textColor="#F57F17"


                app:fontFamily="@font/aclonica" />


            <TextView
                android:id="@+id/test2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingRight="10dp"
                android:text="@string/val_test2"
                android:textColor="#F57F17"

                app:fontFamily="@font/aclonica" />


            <TextView
                android:id="@+id/absence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingRight="10dp"
                android:text="@string/val_absence"
                android:textColor="#F57F17"

                app:fontFamily="@font/aclonica" />


            <TextView

                android:id="@+id/assiduite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/val_assiduite"
                android:textColor="#F57F17"
                app:fontFamily="@font/aclonica" />


        </LinearLayout>
    </LinearLayout>






</LinearLayout>